--- a/templates/base.html
+++ b/templates/base.html
@@ -87,9 +87,9 @@
                 </div>
                 <div class="col-sm-4 offset-md-1 py-4"><h4>Личный кабинет.</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Админка</a></li>
-                        <li><a href="sign_in/" class="text-white">Вход</a></li>
-                        <li><a href="register/" class="text-white">Регистрация</a></li>
+                        <li><a href="/admin/" class="text-white">Админка</a></li>
+                        <li><a href="/sign_in/" class="text-white">Вход</a></li>
+                        <li><a href="/register/" class="text-white">Регистрация</a></li>
                     </ul>
                 </div>
             </div>
