--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Главная{% endblock title %}
 
 {% block content %}
-    <main >
+    <main>
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto"><h1 class="fw-light">Платформа для обмена вещами (бартерная
@@ -11,204 +11,49 @@
                     <p class="lead text-body-secondary">Платформа для работы с объявлениями и обменными
                         предложениями.
                     </p>
-                    <p><a href="#" class="btn btn-primary my-2">Создание объявление.</a>
+                    <p><a href="/ad/" class="btn btn-primary my-2">Создать объявление.</a>
                         <a href="#" class="btn btn-secondary my-2">Найти объявления.</a>
                     </p>
                 </div>
             </div>
         </section>
+
         <div class="album py-5 bg-body-tertiary">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
+                    {% for post in ad_db %}
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
+                                     height="225"
+                                     preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                     xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"></rect>
+                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+                                <div class="card-body">
+                                    <p class="card-text">{{ post.title }}</p>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">{{ post.description }}</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Просмотреть</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
+                                        </div>
+                                        <small class="text-body-secondary">9 mins</small></div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
+                    {% empty %}
+                        <div class="row align-items-center"></div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <div class="card-body"><p class="card-text">В базе данных нет ни одной записи.</p></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                 height="225"
-                                 preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                 xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect>
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body"><p class="card-text">This is a wider card with supporting text below
-                                as a
-                                natural lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small></div>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
