--- a/templates/base.html
+++ b/templates/base.html
@@ -86,13 +86,15 @@
                         просматривать чужие объявления и отправлять предложения на обмен.</p>
                 </div>
 
-                <div class="col-sm-4 offset-md-1 py-4"><h4>Личный кабинет.</h4>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4>Личный кабинет.</h4>
                     <ul class="list-unstyled">
                         {% if user.is_authenticated %}
                             <form method="post" action="{% url 'logout' %}">
 {#                            <form method="post">#}
                                 {% csrf_token %}
                                 <li><a href="{% url 'profile' %}" class="text-white">Профиль</a></li>
+                                <p>Пользователь - {{ user }}</p>
 {#                                <li><a href="{% url 'logout' %}" class="text-white">Выход</a></li>#}
                                 <button data-bs-toggle="modal" type="submit">Выход</button>
                                 {% else %}
