--- a/templates/base.html
+++ b/templates/base.html
@@ -90,8 +90,8 @@
                     <h4>Личный кабинет.</h4>
                     <ul class="list-unstyled">
                         {% if user.is_authenticated %}
-                            <form method="post" action="{% url 'logout' %}">
-                                {#                            <form method="post">#}
+{#                            <form method="post" action="{% url 'logout' %}">#}
+                                                            <form method="post">
                                 {% csrf_token %}
                                 {% if  user.is_staff %}
                                     <li><a href="/admin/" class="text-white">Админка</a></li>
@@ -100,7 +100,7 @@
                                 <p>Пользователь - {{ user.username }}</p>
                                 {#                                <li><a href="{% url 'logout' %}" class="text-white">Выход</a></li>#}
 
-                                <button data-bs-toggle="modal" type="submit">Выход</button>
+                                <button data-bs-toggle="modal" type="submit" formaction="{% url 'logout' %}">Выход</button>
                                 {% else %}
 
                                 <li><a href="{% url 'login' %}" class="text-white">Вход</a></li>
