--- a/templates/index.html
+++ b/templates/index.html
@@ -36,12 +36,14 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text">{{ post.description }}</p>
+                                    <p class="card-text">Оформил - {{ post.user_id }}</p>
+                                    <p class="card-text">Категория - {{ post.category_id }}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Просмотреть</button>
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
                                         </div>
-                                        <small class="text-body-secondary">9 mins</small></div>
+                                        <small class="text-body-secondary">Создан {{ post.created_at }}</small></div>
                                 </div>
                             </div>
                         </div>
