--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                     <p class="lead text-body-secondary">Платформа для работы с объявлениями и обменными
                         предложениями.
                     </p>
-                    <p><a href="/ad/" class="btn btn-primary my-2">Создать объявление.</a>
+                    <p><a href="/advert/" class="btn btn-primary my-2">Создать объявление.</a>
                         <a href="#" class="btn btn-secondary my-2">Найти объявления.</a>
                     </p>
                 </div>
