--- a/templates/advert/advert.html
+++ b/templates/advert/advert.html
@@ -20,11 +20,22 @@
 
             <div class="row g-5">
                 <div class="col-md-7 col-lg-8 text-center">
-                    <form method="post" class="needs-validation" novalidate>
+                    <form method="post" class="needs-validation" novalidate">
                         {% csrf_token %}
-                        {{ ad_form }}
-                        <button type="submit" name='submit_ad_form'>Submit</button>
-{#                        <button class="btn btn-primary w-100 py-2" type="submit" name='ad_form'>Сохранить</button>#}
+                        <div>
+                            {% for field in advert_form %}
+                                <div class="form-group">
+                                    {{ field.label_tag }}
+
+                                        {{ field }}
+
+                                </div>
+                                <div class="error">{{ field.errors }}</div>
+                            {% endfor %}
+                        </div>
+                        <button class="btn btn-primary w-100 py-2" type="submit" >Сохранить</button>
+
+                        {#                        <button type="submit" name='submit_advert_form'>Submit</button>#}
                     </form>
                 </div>
             </div>
