--- a/templates/advert/advert.html
+++ b/templates/advert/advert.html
@@ -20,7 +20,7 @@
 
             <div class="row g-5">
                 <div class="col-md-7 col-lg-8 text-center">
-                    <form method="post" class="needs-validation" novalidate">
+                    <form method="post" class="needs-validation"  enctype="multipart/form-data">
                         {% csrf_token %}
                         <div>
                             {% for field in advert_form %}
