--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,9 @@
                     {% for post in ad_db %}
                         <div class="col">
                             <div class="card shadow-sm">
-                                <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top"
-                                     height="225"
-                                     preserveAspectRatio="xMidYMid slice" role="img" width="100%"
-                                     xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                                <svg  >
+                                    <img src="{{ post.image }}" alt="">
+                                    <title>Placeholder</title>
                                     <rect width="100%" height="100%" fill="#55595c"></rect>
                                     <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
                                 </svg>
