--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}Главная{% endblock title %}
 
 {% block content %}
@@ -24,12 +24,22 @@
                     {% for post in ad_db %}
                         <div class="col">
                             <div class="card shadow-sm">
-                                <svg  >
-                                    <img src="{{ post.image }}" alt="">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect>
-                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
+                                {% if  post.image %}
+                                    <img src="{{ post.image.url }}" alt="Картинка товара"
+                                         class="img-fluid rounded-circle"
+                                         style="max-width: 150px;">
+                                {% else %}
+                                    <img src="{% static "images/noimage.jpg" %}"
+                                         alt="Картинка " class="img-fluid rounded-circle"
+                                         style="max-width: 150px;">
+
+                                {% endif %}
+                                {#                                <svg>#}
+                                {##}
+                                {#                                    <title>Placeholder</title>#}
+                                {#                                    <rect width="100%" height="100%" fill="#55595c"></rect>#}
+                                {#                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>#}
+                                {#                                </svg>#}
                                 <div class="card-body">
                                     <p class="card-text">{{ post.title }}</p>
                                 </div>
@@ -39,8 +49,11 @@
                                     <p class="card-text">Категория - {{ post.category_id }}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Просмотреть</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Просмотреть
+                                            </button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">
+                                                Редактировать
+                                            </button>
                                         </div>
                                         <small class="text-body-secondary">Создан {{ post.created_at }}</small></div>
                                 </div>
